--- a/styles/style.sass
+++ b/styles/style.sass
@@ -120,6 +120,7 @@ section, footer
         position: absolute
         right: calc(50% - 158px)
         top: 70px
+        cursor: pointer
     &__main
         display: flex
         justify-content: space-between
